# delta-rs-test

./: Cargo.toml
.github/actions/setup-env/: action.yml
.github/workflows/: build.yml  python_benchmark.yml  python_build.yml  python_github_packages.yml  python_release.yml
crates/aws/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/catalog-glue/: Cargo.toml
crates/catalog-unity/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/kernel/models/: actions.rs
crates/core/src/operations/: filesystem_check.rs  write.rs
crates/deltalake/: Cargo.toml
crates/lakefs/: Cargo.toml
crates/test/: Cargo.toml
delta-inspect/: Cargo.toml
python/: Cargo.toml  README.md  pyproject.toml
python/deltalake/: table.py
python/tests/: test_cdf.py  test_table_read.py  test_writer.py
python/tests/pyspark_integration/: test_write_to_pyspark.py  utils.py
