[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.81"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { version = "=0.6.0", features = ["default-engine"] }
#delta_kernel = { path = "../delta-kernel-rs/kernel", features = ["sync-engine"]  }

# arrow
arrow = { version = "=53.4.1" }
arrow-arith = { version = "=53.4.1" }
arrow-array = { version = "=53.4.1", features = ["chrono-tz"] }
arrow-buffer = { version = "=53.4.1" }
arrow-cast = { version = "=53.4.1" }
arrow-ipc = { version = "=53.4.1" }
arrow-json = { version = "=53.4.1" }
arrow-ord = { version = "=53.4.1" }
arrow-row = { version = "=53.4.1" }
arrow-schema = { version = "=53.4.1" }
arrow-select = { version = "=53.4.1" }
object_store = { version = "=0.11.2" , features = ["cloud"]}
parquet = { version = "=53.4.1" }

# datafusion
datafusion = { version = "=44.0.0" }
datafusion-expr = { version = "=44.0.0" }
datafusion-common = { version = "=44.0.0" }
datafusion-ffi = { version = "=44.0.0" }
datafusion-functions = { version = "=44.0.0" }
datafusion-functions-aggregate = { version = "=44.0.0" }
datafusion-physical-expr = { version = "=44.0.0" }
datafusion-physical-plan = { version = "=44.0.0" }
datafusion-proto = { version = "=44.0.0" }
datafusion-sql = { version = "=44.0.0" }

# serde
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
strum = { version = "=0.26.3"}


# "stdlib"
bytes = { version = "=1.10.1" }
chrono = { version = "=0.4.39", default-features = false, features = ["clock"] }
tracing = { version = "=0.1.41", features = ["log"] }
regex = { version = "=1.11.1" }
thiserror = { version = "=2.0.12" }
url = { version = "=2.5.4" }
urlencoding = "=2.1.3"
uuid = { version = "=1.17.0" }

# runtime / async
async-trait = { version = "=0.1.88" }
futures = { version = "=0.3.31" }
tokio = { version = "=1.46.1" }
num_cpus = { version = "=1.17.0" }

